[project]
name = "reactpy-dev-env"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tohboeh5simsim7@gmail.com", email = "you@example.com" }
]
dependencies = [
    "reactpy[fastAPI]>=1.0.2",
    "fastAPI>=0.103.1",
    "uvicorn>=0.23.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
    "ruff>=0.0.290",
]

[tool.black]
line-length = 200

[tool.ruff]
src = ["src", "tests"]
select = ["ALL"]
exclude = [".venv"]
line_length = 200


[tool.ruff.pydocstyle]
convention = "google"

[tool.hatch.metadata]
allow-direct-references = true
